--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,6 +6,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 
+#spring.datasource.url=jdbc:mysql://spinelconsult.c7al7nwqy95l.eu-west-2.rds.amazonaws.com:3306/globaladmin?useTimezone=true&serverTimezone=UTC
+#spring.datasource.username=spineldbqa
+#spring.datasource.password=gMTG4ETtp6gxxZAwDZKACKdCdv
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+
+
 useSSL=false
 
 
