--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -50,7 +50,8 @@ login.attempts=5
 executor-pool-size=20
 executor-queue-size=200
 
-space.sms.url=https://api-dev.spaceso2o.com/api/otp/test
+#space.sms.url=https://api-dev.spaceso2o.com/api/otp/test
+space.sms.url=https://api.spaceso2o.com/api/otp/test
 space.notification.url=https://api-dev.spaceso2o.com/api/notification/public/multiple/notify
 authKey.notification=ae90423a-3384-431d-8f20-761954c3e3bf
 phoneNo.notification=07036982284
